--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="个人网页, 个人简介, 技能展示, 项目经验">
     <meta name="description" content="这是一个个人网页模板，展示了个人简介、技能、项目经验和联系方式。">
-    <title>个人网页模板</title>
+    <title>吴坤明 - 个人网页</title>
     <style>
         * {
             margin: 0;
@@ -113,6 +113,10 @@
             background-color: #444444;
         }
 
+        .award-item, .achievement-item {
+            margin: 1rem 0;
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 1rem;
@@ -131,7 +135,7 @@
 </head>
 <body>
     <header>
-        <h1>个人网页模板</h1>
+        <h1>吴坤明 - 个人网页</h1>
     </header>
 
     <nav>
@@ -139,6 +143,9 @@
             <li><a href="#home">首页</a></li>
             <li><a href="#profile">个人简介</a></li>
             <li><a href="#skills">技能</a></li>
+            <li><a href="#education">教育经历</a></li>
+            <li><a href="#awards">奖项</a></li>
+            <li><a href="#achievements">成果</a></li>
             <li><a href="#projects">项目经验</a></li>
             <li><a href="#contact">联系方式</a></li>
         </ul>
@@ -155,75 +162,119 @@
             <div class="profile-img">
                 <img src="https://via.placeholder.com/150" alt="个人照片">
             </div>
-            <p>我是[你的名字]，一个热爱技术、设计和创新的人。我致力于在[你的领域]领域不断学习和进步，努力实现自己的梦想。</p>
+            <p>我是吴坤明，一个热爱技术、设计和创新的人。我致力于在软件工程和人工智能领域不断学习和进步，努力实现自己的梦想。</p>
         </section>
 
         <section id="skills">
             <h2>技能</h2>
             <div class="skills">
                 <div class="skill-item">
-                    <h3>前端开发</h3>
-                    <p>熟练掌握HTML、CSS和JavaScript，能够构建响应式和高性能的前端应用。</p>
+                    <h3>编程语言</h3>
+                    <p>Python，C/C++，JAVA，HTML，CSS，Javascript，SQL</p>
                 </div>
                 <div class="skill-item">
-                    <h3>后端开发</h3>
-                    <p>熟悉Python、Java和Node.js，能够开发和部署后端服务。</p>
+                    <h3>开发工具</h3>
+                    <p>Pycharm，Visual Studio，VS code，Linux云服务器使用，深度学习相关工具</p>
                 </div>
                 <div class="skill-item">
-                    <h3>数据库管理</h3>
-                    <p>了解关系型数据库和非关系型数据库，能够进行数据库设计和优化。</p>
+                    <h3>数据科学</h3>
+                    <p>Pandas，Numpy等数据科学工具</p>
                 </div>
                 <div class="skill-item">
-                    <h3>版本控制</h3>
-                    <p>熟练使用Git进行代码管理和协作，能够有效解决分支合并问题。</p>
+                    <h3>深度学习</h3>
+                    <p>Pytorch等深度学习工具，熟悉transformers，RWKV等LLM框架和原理</p>
                 </div>
+                <div class="skill-item">
+                    <h3>LLM相关</h3>
+                    <p>熟悉Bert，GPT等现有的LLM，熟悉CLIP，BLIP2，LLAVA等多模态预训练模型</p>
+                </div>
+                <div class="skill-item">
+                    <h3>通用技能</h3>
+                    <p>Visio，ProcessOn，SpssPro，Tableau，墨刀，JIRA，汽车驾驶（C1），英语（CET-6）</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="education">
+            <h2>教育经历</h2>
+            <div class="education-item">
+                <h3>四川大学 - 软件工程本科</h3>
+                <p>2021年09月 - 2025年06月</p>
+                <p>综测90.25/100（9%），GPA：3.67/4.0（87.9/100）（20%）</p>
+                <p>主要课程：数据结构，数据库系统，计算机网络，操作系统，面向对象程序设计（91），离散数学，模式识别（96），程序设计实训I/II(94/95)，软件工程经济学（100），程序设计基础(99)</p>
+            </div>
+            <div class="education-item">
+                <h3>四川大学 - 计算机科学与技术硕士</h3>
+                <p>2025年09月 - 2028年06月</p>
+            </div>
+        </section>
+
+        <section id="awards">
+            <h2>奖项</h2>
+            <div class="award-item">
+                <h3>美国大学生数学建模大赛一等奖（Meritorious Winner）</h3>
+            </div>
+            <div class="award-item">
+                <h3>中国大学生数学建模大赛四川赛区一等奖</h3>
+            </div>
+            <div class="award-item">
+                <h3>四川大学互联网+创新创业大赛银奖（核心成员）</h3>
+            </div>
+            <div class="award-item">
+                <h3>新加坡国立大学暑期项目优秀学员，A+成绩</h3>
+            </div>
+        </section>
+
+        <section id="achievements">
+            <h2>成果</h2>
+            <div class="achievement-item">
+                <h3>科研成果</h3>
+                <p>IJCNN(CCF-C)会议论文二作录用</p>
+                <p>EI期刊一作录用一项</p>
+                <p>获批软件著作权两项，专利一项（校内实验室项目产出）</p>
+                <p>一篇顶会三作在投（负责画图和少量写作）</p>
+                <p>另有一篇基本完稿文章和多项已完成基础实验的工作（共一及以上）</p>
             </div>
         </section>
 
         <section id="projects">
             <h2>项目经验</h2>
             <div class="project-item">
-                <h3>项目一：[项目名称]</h3>
-                <p>项目描述：这是一个关于[项目描述]的项目，主要功能包括[功能列表]。</p>
-                <p>技术栈：[技术栈列表]</p>
-                <p>我的贡献：[你的贡献]</p>
-                <a href="#" class="button">查看项目</a>
+                <h3>西门子（中国）成都分公司 IF intern</h3>
+                <p>2024年05月 - 2024年10月</p>
+                <p>1. 在智能制造工作流程中进一步集成了SAM模型，以提高自动化和效率。</p>
+                <p>2. 研究并原型化了VLM+机械臂的实施，以提高制造过程中机械臂的精确度和适应性。</p>
+                <p>3. 基于GroundDINO开发产品计件系统并协调完成产线PLC调试，投入使用。</p>
             </div>
             <div class="project-item">
-                <h3>项目二：[项目名称]</h3>
-                <p>项目描述：这是一个关于[项目描述]的项目，主要功能包括[功能列表]。</p>
-                <p>技术栈：[技术栈列表]</p>
-                <p>我的贡献：[你的贡献]</p>
-                <a href="#" class="button">查看项目</a>
+                <h3>MAS-UAV：一种基于Multi-Agent System的高灵活性无人机任务调度方案</h3>
+                <p>2024年11月 - 至今</p>
+                <p>个人工作：前期调研发现低空经济需求和无人机调度问题，在没有前人研究的情况下首次提出结合将LLM MAS用于低空经济中重要一环，无人机调度的想法并详细调研相关论文，提出详细实现方案，进行初步代码实验，详细实验探索。</p>
+                <p>项目进展：目前已完成可行性分析和初步实验，接下来将进一步完善方案并做更多的大规模实验。</p>
+            </div>
+            <div class="project-item">
+                <h3>G-Meomory：基于图结构存储的Multi-Agent System记忆调度方法</h3>
+                <p>2024年11月 - 至今</p>
+                <p>个人工作：分析目前RAG和MAS Memory相关研究，提出问题，并创新性的引入使用图结构存储构建记忆机制的想法，并进行初期尝试，完成储存机制代码，并进行初步实验，并继续完善方案，对完成最终方法和批量实验做准备。</p>
+                <p>项目结果：目前已完成可行性分析和初步实验，接下来将进一步完善方案并做更多的大规模实验。</p>
+            </div>
+            <div class="project-item">
+                <h3>基于知识图谱的精神病医疗问答系统（省级大创）</h3>
+                <p>2022年09月 - 2023年07月</p>
+                <p>个人工作：调研大量论文，研报，从业人员，确定精神病方面知识图谱工作的缺失，探讨并设计方案，使用爬虫获得的数据，公开数据集和华西医院的数据构造精神病知识图谱，基于知识图谱和LLM完成问答系统的构建。创新性的提出基于知识图谱的贝叶斯网络问答模型。</p>
+                <p>项目结果：目前已完成模型初步训练和问答平台的初步构建，并已获批一项软著。</p>
             </div>
         </section>
 
         <section id="contact">
             <h2>联系方式</h2>
-            <p>邮箱：[你的邮箱]</p>
-            <p>电话：[你的电话]</p>
-            <p>地址：[你的地址]</p>
-            <p>社交媒体：</p>
-            <a href="#">GitHub</a>
-            <a href="#">LinkedIn</a>
-            <a href="#">Twitter</a>
+            <p>电话：18308984397</p>
+            <p>邮箱：2197639171@qq.com</p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 [你的名字]. 保留所有权利。</p>
+        <p>&copy; 2024 吴坤明. 保留所有权利。</p>
     </footer>
-
-    <script>
-        // 添加导航栏的点击事件
-        document.querySelectorAll('nav ul li a').forEach(item => {
-            item.addEventListener('click', function(event) {
-                event.preventDefault();
-                const targetId = this.getAttribute('href').substring(1);
-                const targetSection = document.getElementById(targetId);
-                targetSection.scrollIntoView({ behavior: 'smooth' });
-            });
-        });
-    </script>
 </body>
 </html>
