--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <section id="profile">
             <h2>个人简介</h2>
             <div class="profile-img">
-                <img src="一寸.jpg" alt="个人照片">
+                <img src="https://github.com/WuKunming3/WuKunming3.github.io/blob/main/1%E5%AF%B8.jpg" alt="个人照片">
             </div>
             <p>我是吴坤明，一个热爱技术、设计和创新的人。我致力于在软件工程和人工智能领域不断学习和进步，努力实现自己的梦想。</p>
         </section>
