--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="个人网页, 个人简介, 技能展示, 项目经验">
-    <meta name="description" content="这是一个个人网页模板，展示了个人简介、技能、项目经验和联系方式。">
+    <meta name="description" content="我的个人网页，目前主要当作简历跳转页面用，后续如果有什么需要或许会加入一些其他功能吧">
     <title>吴坤明 - 个人网页</title>
     <style>
         * {
@@ -146,6 +146,7 @@
             <li><a href="#education">教育经历</a></li>
             <li><a href="#awards">奖项</a></li>
             <li><a href="#achievements">成果</a></li>
+            <li><a href="#works">绘图和PPT</a></li>
             <li><a href="#projects">项目经验</a></li>
             <li><a href="#contact">联系方式</a></li>
         </ul>
@@ -263,6 +264,12 @@
                 <p>2022年09月 - 2023年07月</p>
                 <p>个人工作：调研大量论文，研报，从业人员，确定精神病方面知识图谱工作的缺失，探讨并设计方案，使用爬虫获得的数据，公开数据集和华西医院的数据构造精神病知识图谱，基于知识图谱和LLM完成问答系统的构建。创新性的提出基于知识图谱的贝叶斯网络问答模型。</p>
                 <p>项目结果：目前已完成模型初步训练和问答平台的初步构建，并已获批一项软著。</p>
+            </div>
+            <div class="project-item">
+                <h3>基于蛋白质预训练模型的MHCI类和肽段亲和力预测模型</h3>
+                <p>2022年11月 - 2023年05月</p>
+                <p>个人工作：提出使用预训练的蛋白质编码器对预测模型进行优化，使用ProteinBert作为编码器进行模型训练，在同个分类器下相比非参数化的蛋白质编码方式得到了显著提高，并将NLP中prefix	prompt的模式引入蛋白质编码，进一步提高了模型性能。</p>
+                <p>项目结果：通过多项实验完成了预训练模型用于亲和力预测的探索。</p>
             </div>
         </section>
 
