--- a/index.html
+++ b/index.html
@@ -258,7 +258,6 @@
             <li><a href="#home">首页</a></li>
             <li><a href="#profile">个人简介</a></li>
             <li><a href="#skills">技能</a></li>
-            <li><a href="#education">教育经历</a></li>
             <li><a href="#awards">奖项</a></li>
             <li><a href="#achievements">成果</a></li>
             <li><a href="#works">绘图和PPT</a></li>
@@ -293,7 +292,7 @@
 
         <main class="main-content">
             <div class="profile-img">
-                <img src="https://github.com/WuKunming3/WuKunming3.github.io/blob/main/1%E5%AF%B8.jpg?raw=true" alt="个人照片">
+                <img src="https://github.com/WuKunming3/WuKunming3.github.io/blob/main/%E8%B5%A0.jpg?raw=true" alt="个人照片">
             </div>
 
             <section id="home">
@@ -303,7 +302,7 @@
 
             <section id="profile">
                 <h2>个人简介</h2>
-                <p>我是吴坤明，一个热爱技术、设计和创新的人。我致力于在软件工程和人工智能领域不断学习和进步，努力实现自己的梦想。</p>
+                <p>我是吴坤明，一个计算机专业研究生，从这份网页可能可以看出我具有一定的技术基础，是的，我确实有一定的技术和科研基础，但由于近年PhD申请难度剧增等原因，我最终还是没有去读博而是仅仅保研，目前正在寻找一些高质量的非技术岗实习，产品，运营，战略等均可。PS,PR,AE都或多或少会一些，经常关注股市，也会做一些基础的财务分析和研报分析，如果您有合适的岗位请随时联系我！</p>
             </section>
 
             <section id="skills">
